--- a/src/components/help/aq-help-home.html
+++ b/src/components/help/aq-help-home.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../../bower_components/paper-item/paper-item.html">
 
 <link rel='import' href="../../../bower_components/iron-scroll-spy/iron-auto-scroll-spy.html">
@@ -21,6 +22,17 @@
       margin: 0 auto;
       background-color: white;
     }
+    .selectable{
+      cursor: pointer;
+    }
+    .selectable:hover{
+      color: green;
+      font-weight: bold;
+    }
+    .searchCategories{
+      width: 90%;
+      margin-left:5%;
+    }
 
   </style>
  
@@ -29,39 +41,39 @@
         #autoScrollSpy div {
           padding: 150px;
           border-bottom: 1px solid grey;
-          transition: background 0s;
+          transition: background 0.2s;
         }
       </style>
 
       <paper-drawer-panel id="drawerPanel" right-drawer>
+
           <paper-header-panel main id="mainPanel" mode="seamed">
               <iron-auto-scroll-spy scroll-duration=0 selected="{{scrollSelected}}" id="autoScrollSpy">
-                <aq-help-marked-item help-text="# Signals
-The basic currency of Reactive programs is the signal. `Signal{T}` represents a time-varying value of type `T`.
-
-A signal can be created using the `Signal` constructor, and must be given an inital value.
-
-```
-#E.g.
-julia> x = Signal(0)
-Signal{Int64}(0, nactions=0)
-function func()
-  return x
-end```"></aq-help-marked-item>
+                <template is="dom-repeat" items="{{itemsHelpContent}}">      
+                  <div> <h1>{{item.header}}</h1> <br>
+                  <img src="{{item.img_src}}" height="400" width="400">
+                  <p>{{item.text}}</p></div>
+                </template>
               </iron-auto-scroll-spy>
           </paper-header-panel>
+          <iron-ajax auto url=""
+            handle-as="json"
+            id="ajaxCategories"
+            on-response="handleResponseCategories"
+            debounce-duration="300"></iron-ajax>
+
+            <iron-ajax auto url=""
+            handle-as="json"
+            id="ajaxHelpContent"
+            on-response="handleResponseHelpContent"
+            debounce-duration="300"></iron-ajax>
 
           <paper-header-panel drawer mode="seamed">
-              <paper-listbox selected="{{scrollSelected}}">         
-                  <paper-item>Section A</paper-item>
-                  <paper-item>Section B</paper-item>
-                  <paper-item>Section C</paper-item>
-                  <paper-item>Section D</paper-item>
-                  <paper-item>Section E</paper-item>
-                  <paper-item>Section F</paper-item>
-                  <paper-item>Section G</paper-item>
-                  <paper-item>Section H</paper-item>
-                
+            <paper-input class="searchCategories" label="Search Categories" on-keyup="search" id="search_input"></paper-input>
+              <paper-listbox selected="{{scrollSelected}}">   
+                <template is="dom-repeat" items="{{itemsCategories}}">      
+                  <paper-item class="selectable">{{item.Category}}</paper-item>
+                </template>
               </paper-listbox>
           </paper-header-panel>
 
@@ -74,12 +86,55 @@ end```"></aq-help-marked-item>
     Polymer ({
       is: 'aq-help-home',
 
-      ready() {
-        
-         this.$$('#autoScrollSpy').scrollTarget = this.$.mainPanel.scroller;
+      properties:{
+        itemsCategories: {
+          type: Object,
+          value: true,
+        },
+        itemsHelpContent: {
+          type: Object,
+          value: true,
+        },
+        categoriesArray:{
+          type: Object,
+          value: true,
+        }
       },
 
+      ready() {
+         this.$$('#autoScrollSpy').scrollTarget = this.$.mainPanel.scroller;
+         this.$.ajaxCategories.url = "http://localhost:8080/src/components/help/data_categories.json";
+         this.$.ajaxHelpContent.url = "http://localhost:8080/src/components/help/data_help.json";
+      },
+
+      search: function(){
+        var search = this.$$('#search_input').value;
+        search = search.toLowerCase();
+        var parent = this;
+        var categoriesClass = document.getElementsByClassName('selectable');
+        // for(var i=0; i<this.itemsCategories.length;i++){
+          // if(search.indexOf(parent.itemsCategories[i].Category))
+        // }
+        var text;
+        for(var i=0; i<this.categoriesArray.length;i++){
+          text = parent.categoriesArray[i].Category.toLowerCase();
+          if(text.indexOf(search) > -1){
+            categoriesClass[i].style.display="block";
+            categoriesClass[i].style.lineHeight="3";
+          }
+          else{
+            categoriesClass[i].style.display="none";
+          }
+        }
+      },
+
+      handleResponseCategories: function(e){
+        this.set('itemsCategories',e.detail.response.Categories);
+        this.categoriesArray = this.itemsCategories;
+      },
+      handleResponseHelpContent: function(e){
+        this.set('itemsHelpContent', e.detail.response.Help)
+      }
     });
   </script>
-
 </dom-module>
