1. Improved User Menu. Added support for sign-out, invitation and feedback. 2. A few CSS changes

--- a/src/components/aq-markdown-editor.html
+++ b/src/components/aq-markdown-editor.html
@@ -35,14 +35,14 @@
                   "code", "quote", "link", "|", "unordered-list","ordered-list", "table","|","preview","side-by-side", "fullscreen"],
         },
         
-        placeholder: {
+        placeHolder: {
           type:String,
           value:"Share your thoughts",
         },
       },
       
       ready() {
-        this.simplemde = new SimpleMDE({element: this.$.MyID, toolbar:this.toolbar                              ,placeholder:this.placeholder});
+        this.simplemde = new SimpleMDE({element: this.$.MyID, toolbar:this.toolbar                              ,placeholder:this.placeHolder});
       },
     
       getContent: function(){
