--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -158,6 +158,11 @@
           <iron-icon item-icon icon="icons:feedback"></iron-icon>
         </paper-icon-item>
 
+        <paper-icon-item action-panel='invitefriend' on-tap="onAction">Invite a Friend
+          <iron-icon item-icon icon="editor:insert-invitation">
+          </iron-icon>
+        </paper-icon-item>
+
         <!--paper-icon-item action-panel='lockscreen' on-tap="onAction">Lock Screen
           <iron-icon item-icon icon="vaadin-icons:lock"></iron-icon>
         </paper-icon-item-->
