--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -44,6 +44,7 @@
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       --height:100%;
+      background-color:#f4f9fb;--#f2f8fa;--#eff6f9;
     }
 
     paper-drawer-panel {
